OSL Crashes when script with trace connected to displacement output #66171

Closed
opened 2019-06-27 10:13:34 +02:00 by Ilja Razinkov · 7 comments

System Information
Operating system: MacOs mojave 10.14.5

Blender Version
Broken: hash 054dbb83833e15 (downloaded 27-06-2019)

Blender crashes on OSL-script update when render preview is active under following conditions:

  1. script has trace commands
  2. script output connected to material Displacement node
    Without this conditions everything is stable.
    I understand that calling trace for getting displace is shady since order of applying displace and executing trace can be different... but sometimes this is really helpful - for example when i need some object to "magnetically stretch" to near objects without complex setups. it should clearly work for non-dependant parts of the scene for example. Or at least should not crash :)

See screenshot and attached blend. Just enable rendered preview and reconnect several times input of script to whatever. You will get crash - for me 2-3 reconnects is sufficient

osl-trace-crash.blend.zip

Снимок экрана 2019-06-27 в 11.12.16.png

**System Information** Operating system: MacOs mojave 10.14.5 **Blender Version** Broken: hash 054dbb83833e15 (downloaded 27-06-2019) Blender crashes on OSL-script update when render preview is active under following conditions: 1) script has trace commands 2) script output connected to material Displacement node Without this conditions everything is stable. I understand that calling trace for getting displace is shady since order of applying displace and executing trace can be different... but sometimes this is really helpful - for example when i need some object to "magnetically stretch" to near objects without complex setups. it should clearly work for non-dependant parts of the scene for example. Or at least should not crash :) See screenshot and attached blend. Just enable rendered preview and reconnect several times input of script to whatever. You will get crash - for me 2-3 reconnects is sufficient [osl-trace-crash.blend.zip](https://archive.blender.org/developer/F7551435/osl-trace-crash.blend.zip) ![Снимок экрана 2019-06-27 в 11.12.16.png](https://archive.blender.org/developer/F7551436/Снимок_экрана_2019-06-27_в_11.12.16.png)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6

Added subscriber: @ArtoKitula

Added subscriber: @ArtoKitula
Brecht Van Lommel was assigned by Arto Kitula 2019-06-27 11:43:00 +02:00

I got crash just by enabling rendered.

Application Specific Information:
Assertion failed: (alignment == 16), function aligned_malloc, file /Users/azo/Code/blender/blender build/blender/intern/guardedalloc/intern/mallocn.c, line 79.
 

Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   libsystem_kernel.dylib        	0x00007fff685b52c6 __pthread_kill + 10
1   libsystem_pthread.dylib       	0x00007fff68670bf1 pthread_kill + 284
2   libsystem_c.dylib             	0x00007fff6851f745 __abort + 144
3   libsystem_c.dylib             	0x00007fff6851f6b5 abort + 142
4   libsystem_c.dylib             	0x00007fff684e820d __assert_rtn + 324
5   Blender                       	0x000000010e8babfb aligned_malloc + 75 (mallocn.c:79)
6   Blender                       	0x000000010e8bd548 MEM_lockfree_mallocN_aligned + 248 (mallocn_lockfree_impl.c:369)
7   Blender                       	0x0000000118152c8a ccl::util_aligned_malloc(unsigned long, int) + 42 (util_aligned_malloc.cpp:46)
8   Blender                       	0x0000000117ea6a00 ccl::OSLRenderServices* ccl::util_aligned_new<ccl::OSLRenderServices, OpenImageIO_v1_8::TextureSystem*>(OpenImageIO_v1_8::TextureSystem*) + 32 (util_aligned_malloc.h:36)
9   Blender                       	0x0000000117ea2233 ccl::OSLShaderManager::shading_system_init() + 147 (osl.cpp:229)
10  Blender                       	0x0000000117ea1e7b ccl::OSLShaderManager::OSLShaderManager() + 139 (osl.cpp:65)
11  Blender                       	0x0000000117ea28a5 ccl::OSLShaderManager::OSLShaderManager() + 21 (osl.cpp:66)
12  Blender                       	0x0000000117edf7bb ccl::ShaderManager::create(ccl::Scene*, int) + 59 (shader.cpp:418)
13  Blender                       	0x0000000117ec3fc3 ccl::Scene::Scene(ccl::SceneParams const&, ccl::Device*) + 1587 (scene.cpp:107)
14  Blender                       	0x0000000117ec42f5 ccl::Scene::Scene(ccl::SceneParams const&, ccl::Device*) + 37 (scene.cpp:110)
15  Blender                       	0x000000010ec3c13a ccl::BlenderSession::create_session() + 1674 (blender_session.cpp:143)
16  Blender                       	0x000000010ec3baa5 ccl::BlenderSession::create() + 21 (blender_session.cpp:120)
17  Blender                       	0x000000010ec412e0 ccl::BlenderSession::reset_session(BL::BlendData&, BL::Depsgraph&) + 576 (blender_session.cpp:206)
18  Blender                       	0x000000010ec2edbb ccl::reset_func(_object*, _object*) + 219 (blender_python.cpp:379)
19  Blender                       	0x000000010ef95e1b _PyMethodDef_RawFastCallKeywords + 251
20  Blender                       	0x000000010ef9536c _PyCFunction_FastCallKeywords + 44 (call.c:733)
21  Blender                       	0x000000010f067568 call_function + 488
22  Blender                       	0x000000010f05f6a2 _PyEval_EvalFrameDefault + 4114 (ceval.c:3087)
23  Blender                       	0x000000010ef95860 function_code_fastcall + 256 (call.c:283)
24  Blender                       	0x000000010f0675f8 call_function + 632 (ceval.c:4586)
25  Blender                       	0x000000010f05f6a2 _PyEval_EvalFrameDefault + 4114 (ceval.c:3087)
26  Blender                       	0x000000010ef95860 function_code_fastcall + 256 (call.c:283)
27  Blender                       	0x000000010e8f9c68 bpy_class_call + 1896 (bpy_rna.c:8295)
28  Blender                       	0x000000010eaba709 engine_view_update + 169 (rna_render.c:224)
29  Blender                       	0x0000000112c7997e external_draw_scene_do + 222 (external_engine.c:206)
30  Blender                       	0x0000000112c7982a external_draw_scene + 90 (external_engine.c:246)
31  Blender                       	0x0000000112c095c1 drw_engines_draw_scene + 113 (draw_manager.c:1184)
32  Blender                       	0x0000000112c08619 DRW_draw_render_loop_ex + 1561 (draw_manager.c:1662)
33  Blender                       	0x0000000112c07ff3 DRW_draw_view + 323 (draw_manager.c:1542)
34  Blender                       	0x0000000113167abf view3d_draw_view + 127 (view3d_draw.c:1450)
35  Blender                       	0x00000001131679f7 view3d_main_region_draw + 55 (view3d_draw.c:1475)
36  Blender                       	0x0000000113241b76 ED_region_do_draw + 374
37  Blender                       	0x000000010eb7b40c wm_draw_window_offscreen + 732 (wm_draw.c:596)
38  Blender                       	0x000000010eb7a762 wm_draw_window + 66 (wm_draw.c:735)
39  Blender                       	0x000000010eb7a4a9 wm_draw_update + 169 (wm_draw.c:897)
40  Blender                       	0x000000010eb77c79 WM_main + 57 (wm.c:411)
41  Blender                       	0x000000010e3a2653 main + 1251
42  libdyld.dylib                 	0x00007fff6847a3d5 start + 1

I got crash just by enabling rendered. ``` Application Specific Information: Assertion failed: (alignment == 16), function aligned_malloc, file /Users/azo/Code/blender/blender build/blender/intern/guardedalloc/intern/mallocn.c, line 79. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x00007fff685b52c6 __pthread_kill + 10 1 libsystem_pthread.dylib 0x00007fff68670bf1 pthread_kill + 284 2 libsystem_c.dylib 0x00007fff6851f745 __abort + 144 3 libsystem_c.dylib 0x00007fff6851f6b5 abort + 142 4 libsystem_c.dylib 0x00007fff684e820d __assert_rtn + 324 5 Blender 0x000000010e8babfb aligned_malloc + 75 (mallocn.c:79) 6 Blender 0x000000010e8bd548 MEM_lockfree_mallocN_aligned + 248 (mallocn_lockfree_impl.c:369) 7 Blender 0x0000000118152c8a ccl::util_aligned_malloc(unsigned long, int) + 42 (util_aligned_malloc.cpp:46) 8 Blender 0x0000000117ea6a00 ccl::OSLRenderServices* ccl::util_aligned_new<ccl::OSLRenderServices, OpenImageIO_v1_8::TextureSystem*>(OpenImageIO_v1_8::TextureSystem*) + 32 (util_aligned_malloc.h:36) 9 Blender 0x0000000117ea2233 ccl::OSLShaderManager::shading_system_init() + 147 (osl.cpp:229) 10 Blender 0x0000000117ea1e7b ccl::OSLShaderManager::OSLShaderManager() + 139 (osl.cpp:65) 11 Blender 0x0000000117ea28a5 ccl::OSLShaderManager::OSLShaderManager() + 21 (osl.cpp:66) 12 Blender 0x0000000117edf7bb ccl::ShaderManager::create(ccl::Scene*, int) + 59 (shader.cpp:418) 13 Blender 0x0000000117ec3fc3 ccl::Scene::Scene(ccl::SceneParams const&, ccl::Device*) + 1587 (scene.cpp:107) 14 Blender 0x0000000117ec42f5 ccl::Scene::Scene(ccl::SceneParams const&, ccl::Device*) + 37 (scene.cpp:110) 15 Blender 0x000000010ec3c13a ccl::BlenderSession::create_session() + 1674 (blender_session.cpp:143) 16 Blender 0x000000010ec3baa5 ccl::BlenderSession::create() + 21 (blender_session.cpp:120) 17 Blender 0x000000010ec412e0 ccl::BlenderSession::reset_session(BL::BlendData&, BL::Depsgraph&) + 576 (blender_session.cpp:206) 18 Blender 0x000000010ec2edbb ccl::reset_func(_object*, _object*) + 219 (blender_python.cpp:379) 19 Blender 0x000000010ef95e1b _PyMethodDef_RawFastCallKeywords + 251 20 Blender 0x000000010ef9536c _PyCFunction_FastCallKeywords + 44 (call.c:733) 21 Blender 0x000000010f067568 call_function + 488 22 Blender 0x000000010f05f6a2 _PyEval_EvalFrameDefault + 4114 (ceval.c:3087) 23 Blender 0x000000010ef95860 function_code_fastcall + 256 (call.c:283) 24 Blender 0x000000010f0675f8 call_function + 632 (ceval.c:4586) 25 Blender 0x000000010f05f6a2 _PyEval_EvalFrameDefault + 4114 (ceval.c:3087) 26 Blender 0x000000010ef95860 function_code_fastcall + 256 (call.c:283) 27 Blender 0x000000010e8f9c68 bpy_class_call + 1896 (bpy_rna.c:8295) 28 Blender 0x000000010eaba709 engine_view_update + 169 (rna_render.c:224) 29 Blender 0x0000000112c7997e external_draw_scene_do + 222 (external_engine.c:206) 30 Blender 0x0000000112c7982a external_draw_scene + 90 (external_engine.c:246) 31 Blender 0x0000000112c095c1 drw_engines_draw_scene + 113 (draw_manager.c:1184) 32 Blender 0x0000000112c08619 DRW_draw_render_loop_ex + 1561 (draw_manager.c:1662) 33 Blender 0x0000000112c07ff3 DRW_draw_view + 323 (draw_manager.c:1542) 34 Blender 0x0000000113167abf view3d_draw_view + 127 (view3d_draw.c:1450) 35 Blender 0x00000001131679f7 view3d_main_region_draw + 55 (view3d_draw.c:1475) 36 Blender 0x0000000113241b76 ED_region_do_draw + 374 37 Blender 0x000000010eb7b40c wm_draw_window_offscreen + 732 (wm_draw.c:596) 38 Blender 0x000000010eb7a762 wm_draw_window + 66 (wm_draw.c:735) 39 Blender 0x000000010eb7a4a9 wm_draw_update + 169 (wm_draw.c:897) 40 Blender 0x000000010eb77c79 WM_main + 57 (wm.c:411) 41 Blender 0x000000010e3a2653 main + 1251 42 libdyld.dylib 0x00007fff6847a3d5 start + 1 ```

This issue was referenced by blender/cycles@3622d6b121

This issue was referenced by blender/cycles@3622d6b121827e491067b620d9172c861790f9d1

This issue was referenced by 5eb156e769

This issue was referenced by 5eb156e7692b9ab24338c73f82360338396cdbe1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

whoa, that was fast. Thank you!

whoa, that was fast. Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66171
No description provided.