Fix T66171: Cycles OSL trace() crashing in displacement shaders

This is not supported, meshes do not exist in the BVH before displacement.